--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,13 @@
 <html>
     <head>
-        <title>
-            Document classification of research papers with NLP techniques
-        </title>
     </head>
     <body>
-        <h1>Welcome people!!</h1>
+        <h1>Document classification of research papers with NLP techniques</h1>
+        <form action="/predict" method="POST">
+            <input type="text" name="data1" placeholder="Enter text 1"><br>
+            <input type="text" name="data2" placeholder="Enter text 2"><br>
+            <input type="submit" name="Predict">
+        </form>
+        <p>{{prediction}}</p>
     </body>
 </html>
